Closed
Bug 626049
Opened 14 years ago
Closed 14 years ago
mingw build crashes in [@ EnumAllChildWindProc]
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jacek, Assigned: jacek)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
507 bytes,
patch
|
bas.schouten
:
review+
dbaron
:
approval2.0+
|
Details | Diff | Splinter Review |
It crashes because it gets a wrong function pointer passed by LPARAM. That's because in EnumAllThreadWindowProc, we pass &aCallback to EnumThreadWindow. The ampersand is threated differently in this case by GCC and MSVC. In MSVC, &aCallback == aCallback, but in gcc it works like for any pointer type, so *(&aCallback) == aCallback. The attached patch changes the code to use simple aCallback, so it works on both compilers.
Attachment #504118 -
Flags: review?(bas.schouten)
Updated•14 years ago
|
Attachment #504118 -
Flags: review?(bas.schouten) → review+
Assignee | ||
Updated•14 years ago
|
Attachment #504118 -
Flags: approval2.0?
Severity: normal → critical
Keywords: crash
Summary: mingw build crashes in EnumAllChildWindProc → mingw build crashes in [@ EnumAllChildWindProc]
Attachment #504118 -
Flags: approval2.0? → approval2.0+
Assignee | ||
Comment 1•14 years ago
|
||
Thanks for review, landed:
http://hg.mozilla.org/mozilla-central/rev/51188908033f
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ EnumAllChildWindProc]
You need to log in
before you can comment on or make changes to this bug.
Description
•