Bug 626049 - mingw build crashes in [@ EnumAllChildWindProc] r=bas.schouten a=dbaron